--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./bin/www",
   "dependencies": {
     "gulp-sftp": "^0.1.5",
-     "body-parser": "~1.15.1",
+    "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
@@ -14,6 +14,11 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.0.9",
+    "ejs": "^2.4.2",
     "gulp-exec": "^2.1.2"
   },
   "scripts": {
