--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular-material-data-table": "^0.10.9",
     "angular-schema-form": "^0.8.13",
     "body-parser": "~1.15.1",
+    "browser-sync": "^2.14.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
